Fix vertical align

--- a/Radzen.Blazor/themes/components/blazor/_form-field.scss
+++ b/Radzen.Blazor/themes/components/blazor/_form-field.scss
@@ -30,6 +30,7 @@ $form-field-helper-padding: 0 0.5rem !default;
 .rz-form-field-wrapper {
     display: inline-flex;
     flex-direction: column;
+    vertical-align: top;
 }
 
 .rz-form-field-helper {
